--- a/web/src/main/resources/templates/head/head.html
+++ b/web/src/main/resources/templates/head/head.html
@@ -92,7 +92,7 @@
                     </div>
                     <div class="ct-total">
                       	 共<b th:text="${session.cartLines==null?0:session.cartLines.size()}" id="totalNum">21</b>件商品
-                        <a class="go-cart">去购物车</a>
+                        <a class="go-cart" href="/user/carts">去购物车</a>
                     </div>
                 </div>
             </div>
