--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -169,7 +169,7 @@
         </div>
         <div class="topic">
             <div class="hd-line clearfix">
-                <h3 class="fl">专题</h3>
+                <h3 class="fl">解决方案</h3>
                 <a class="fr" href="/subjects"><img th:src="@{/img/more.png}"/></a>
             </div>
             <div th:each="subjectCategory:${subjectCategories}">
