--- a/web/src/main/resources/templates/subject/subjects.html
+++ b/web/src/main/resources/templates/subject/subjects.html
@@ -30,6 +30,7 @@
 	<!-- header -->
 	<div class="wrapper">
 		<div class="wrapper h400">
+			<div th:include="productcategory/secondCategories">Head</div>
 			<div class="crumb news-crumb">
 				<a href="/">首页</a> <i>></i> <i th:text="${pc.name}"></i>
 			</div>
