修改商品字段长度，修改后台分页BUG

--- a/admin/src/main/resources/templates/product/list.html
+++ b/admin/src/main/resources/templates/product/list.html
@@ -54,6 +54,6 @@
         </tbody>
     </table>
     <div class="pagenumQu">
-        <pagination total-items="total" items-per-page="15" max-size="7" ng-model="page" ng-change="search()"></pagination>
+        <pagination total-items="total" items-per-page="15" max-size="7" ng-model="page" ng-change="search(page)"></pagination>
     </div>
 </div>
