--- a/admin/src/main/resources/templates/brand/brand.html
+++ b/admin/src/main/resources/templates/brand/brand.html
@@ -1,7 +1,11 @@
 <div class="contentpanel">
+<alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="1000" close="closeAlert($index)">{{alert.msg}}</alert>
     <form class="form-inline">
         <div class="form-group">
             <a class="btn btn-success btn-sm" data-toggle="modal" data-target="#brandModal" ng-click="create()">添加</a>
+        </div>
+        <div class="form-group">
+            <a class="btn btn-success btn-sm" data-toggle="modal" data-target="#brandModal" ng-click="showOnIndex()">品牌展示</a>
         </div>
     </form>
     <table class="table table-bordered">
@@ -11,6 +15,8 @@
                 <th>品牌名称</th>
                 <th>logo</th>
                 <th>状态</th>
+                <th>是否显示在主页</th>
+                <th>展示时间</th>
                 <th>操作</th>
             </tr>
         </thead>
@@ -22,12 +28,17 @@
                     <img ng-src="{{item.cover}}" width="120" height="120" />
                 </td>
                 <td>{{item.state|activeFilter}}</td>
+                <td>{{item.show|brandShowOnIndexFilter}}</td>
+                <td>{{item.showTime|date:'yyyy-MM-dd HH:mm:ss'}}</td>
                 <td>
                     <button type="button" class="btn btn-default btn-primary btn-sm" ng-click="delete(item)">
                         {{item.state|reverseActiveFilter}}
                     </button>
                     <button type="button" class="btn btn-primary btn-sm" ng-click="view(item)">
                     	修改
+                    </button>
+                     <button type="button" class="btn btn-primary btn-sm" ng-click="showOrHide(item)">
+                    	{{item.show|brandShowButtonFilter}}
                     </button>
                 </td>
             </tr>
