--- a/admin/src/main/resources/templates/scroll/list.html
+++ b/admin/src/main/resources/templates/scroll/list.html
@@ -1,4 +1,9 @@
 <div class="contentpanel">
+	<form class="form-inline">
+        <div class="form-group">
+            <a class="btn btn-success btn-sm" data-toggle="modal" data-target="#brandModal" ng-click="create()">添加</a>
+        </div>
+    </form>
     <table class="table table-bordered mb30">
         <thead>
             <tr>
@@ -6,16 +11,27 @@
                 <th>图片</th>
                 <th>链接</th>
                 <th>提交日期</th>
+                <th>状态</th>
+                <th>操作</th>
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="item in items" ng-click="view(item)">
+            <tr ng-repeat="item in items" >
                 <td>{{$index+1}}</td>
                 <td>
                 	<img ng-src="{{item.imageUrl}}" width="120" height="120" />
                 </td>
                 <td>{{item.href}}</td>
                 <td>{{item.updatedTime|date:'yyyy-MM-dd HH:mm:ss'}}</td>
+                <td>{{item.state|activeFilter}}</td>
+                <td>
+                	<button type="button" class="btn btn-default btn-sm" ng-click="updateState(item)">
+							{{item.state|reverseActiveFilter}}
+					</button>
+					<button type="button" class="btn btn-default btn-sm" ng-click="view(item)">
+					修改
+					</button>
+                </td>
             </tr>
         </tbody>
     </table>
