--- a/web/src/main/resources/templates/head/head.html
+++ b/web/src/main/resources/templates/head/head.html
@@ -106,7 +106,7 @@
                     <li th:class="${pc.id==3?'active':null}"><a href="/productCategories/3">耗材</a></li>
                     <li th:class="${pc.id==4?'active':null}"><a href="/productCategories/4">服务</a></li>
                     <li th:class="${pc.id==6?'active':null}"><a href="/subjects">方案</a></li>
-                    <li><a href="/informationCategorys/7">资讯</a></li>
+                    <li th:class="${pc.id==7||pc.id==8||pc.id==9?'active':null}"><a href="/informationCategorys/7">资讯</a></li>
                 </ul>
                 <ul th:if="${pc==null}">
                     <li class="active"><a href="/">首页</a></li>
