--- a/web/src/main/resources/templates/head/head.html
+++ b/web/src/main/resources/templates/head/head.html
@@ -109,7 +109,7 @@
                     <li th:class="${pc.id==7||pc.id==8||pc.id==9?'active':null}"><a href="/informationCategorys/7">资讯</a></li>
                 </ul>
                 <ul th:if="${pc==null}">
-                    <li class="active"><a href="/">首页</a></li>
+                    <li ><a href="/">首页</a></li>
                     <li ><a href="/productCategories/1">仪器</a></li>
                     <li ><a href="/productCategories/2">试剂</a></li>
                     <li ><a href="/productCategories/3">耗材</a></li>
