--- a/web/src/main/resources/templates/subject/subjects.html
+++ b/web/src/main/resources/templates/subject/subjects.html
@@ -32,7 +32,7 @@
 		<div class="wrapper h400">
 			<div th:include="productcategory/secondCategories">Head</div>
 			<div class="crumb news-crumb">
-				<a href="/">首页</a> <i>></i> <i th:text="${pc.name}"></i>
+				<a href="/">首页</a> <i>></i> <i th:text="${currentSubjectCategory.name}"></i>
 			</div>
 			<div class="global-box topic-boxmainwrapper clearfix">
 				<div class="aside fl">
