--- a/admin/src/main/resources/templates/brand/brandDetail.html
+++ b/admin/src/main/resources/templates/brand/brandDetail.html
@@ -8,9 +8,17 @@
             <div class="form-group">
                 <label class="control-label col-sm-2">标题</label>
                 <div class="col-sm-6">
-                    <input class="form-control" name="title" ng-model="item.title" ng-required="true" ng-maxlength="10" />
+                    <input class="form-control" name="title" ng-model="item.title" ng-required="true" ng-maxlength="10"/>
                     <span ng-show="brandForm.title.$error.required" class="text-danger">请输入标题</span>
                     <span ng-show="brandForm.title.$error.maxlength" class="text-danger">超过长度</span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-2">链接</label>
+                <div class="col-sm-6">
+                    <input class="form-control" name="href" ng-model="item.href" ng-required="true" ng-maxlength="225" />
+                    <span ng-show="brandForm.href.$error.required" class="text-danger">请输入链接</span>
+                    <span ng-show="brandForm.href.$error.maxlength" class="text-danger">超过长度</span>
                 </div>
             </div>
             <div class="form-group lhg">
