--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -95,8 +95,8 @@
 					<div id="J-banner-carousel" class="carousel slide"
 					data-ride="carousel">
 						<ol class="carousel-indicators">
-							<li data-target="#J-banner-carousel" data-slide-to="0" class="active"></li>
-							<li th:each="image,imageStat:${images}" th:unless="${imageStat.index}==0" data-target="#J-banner-carousel" th:attr="data-slide-to=${imageStat.index}"></li>
+							<li data-target="#J-banner-carousel" data-slide-to="0" class="active">1</li>
+							<li th:each="image,imageStat:${images}" th:unless="${imageStat.index}==0" data-target="#J-banner-carousel" th:attr="data-slide-to=${imageStat.index}" th:text="${imageStat.index+1}"></li>
 						</ol>
 						<div class="carousel-inner" role="listbox">
 							<div  class="item active" th:style="'background-image: url('+${images.get(0).getImageUrl()}+')'"></div>
