--- a/web/src/main/resources/templates/user/common/signup.html
+++ b/web/src/main/resources/templates/user/common/signup.html
@@ -102,9 +102,11 @@
 				<span class="logo-hd"><img th:src="@{/img/logo-txt.png}" /></span>
 			</a>
 			<div class="head-menu-btn fr login-resg">
-                <a href="/signup?provider" class="blue ft14">供应商注册</a>
-                <span class="ft14">|</span>
-                <a href="/login" class="blue ft14">已有账号？马上登录</a>
+				<div>
+					<div class="reg-selected" style="margin-right: 8px;">用户注册</div>
+					<a href="/signup?provider"><div class="reg-noselected" >企业注册</div></a>
+				</div>
+                <a href="/login" class="blue ft14" style="float: right;">已有账号？马上登录</a>
             </div>
 		</div>
 	</div>
@@ -181,11 +183,11 @@
 			</div>
 			<div class="form-group">
 				<label><i>*</i>省/市</label>
-				<select th:field="*{province}" class="w100">
+				<select th:field="*{province}" class="pAndC">
 					<option value="">选择省份/市</option>
 					<option th:each="province:${provinces}" th:text="${province.name}" th:value="${province.id}"></option>
 				</select>
-				<select th:field="*{city}" class="w100">
+				<select th:field="*{city}" class="pAndC">
 					<option value="">选择城市</option>
 					<option th:if="${citys!=null}" th:each="city:${citys}" th:text="${city.name}" th:value="${city.id}"></option>
 				</select>
