--- a/web/src/main/resources/templates/footer/footer.html
+++ b/web/src/main/resources/templates/footer/footer.html
@@ -1,19 +1,16 @@
 <div class="footer">
 			<div class="foot-hd">
 				<p>
-					<a href="">关于我们</a> 
-					| <a href="">产品大全</a>  
-					| <a href="">资料下载</a> 
-					| <a href="">营销服务</a> 
-					| <a href="">联系我们</a> 
-					| <a href="">加入我们</a> 
-					| <a href="">友情链接</a> 
-					| <a href="">沪ICP备15040664号</a>
+					<a href="/about">公司简介</a> 
+					| <a href="/statement">法律声明</a>  
+					| <a href="/recruitment">招贤纳士</a> 
+					| <a href="/contactUs">联系我们</a> 
+					| <a href="/problems">常见问题</a> 
 				</p>
 			</div>
 			<div class="foot-bd">
 				 <p>
-				 	© 1998 - 2015 SJ Inc. All Rights Reserved版权所有 不得转载. 著作权声明 | 法律声明 
+				 	COPYRIGHT © 优捷实验 www.ulabexpress.com沪ICP备15040664号
 				 </p>
 			</div>
 		</div>
