--- a/web/src/main/resources/templates/user/login.html
+++ b/web/src/main/resources/templates/user/login.html
@@ -43,9 +43,10 @@
 				<span class="logo-hd"><img th:src="@{/img/logo-txt.png}" /></span>
 			</a>
 			<div class="head-menu-btn fr login-resg">
-                <a href="/signup?user" class="blue ft14">用户注册</a>
-                <span class="ft14">|</span>
-                <a href="/signup?provider" class="blue ft14">供应商注册</a>
+				<div>
+					<a href="/signup?user"><div class="reg-noselected" style="margin-right: 8px;">用户注册</div></a>
+					<a href="/signup?provider"><div class="reg-noselected" >企业注册</div></a>
+				</div>
             </div>
 		</div>
 	</div>
