--- a/web/src/main/resources/templates/product/review.html
+++ b/web/src/main/resources/templates/product/review.html
@@ -29,13 +29,19 @@
 			</li>
 		</ul>
 	</div>
+	<script type="text/javascript" th:src="@{/js/page.js}"></script>
 	<div class="pagination">
 		<div class="l-pagination">
+			<a class="first page" th:attr="url=${viewpage.href},page=0">首页</a>
 			<ul>
 				<li th:each="i:${#numbers.sequence(viewpage.begin,viewpage.end)}" th:class="${i-1==viewpage.current}?active">
 					<a class="page" th:attr="url=${viewpage.href},page=__${i-1}__" th:text="${i}"></a>
 				</li>
 			</ul>
+			<a class="last page" th:attr="url=${viewpage.href},page=(${reviewPage.getTotalPages()==0}?0:${reviewPage.getTotalPages()-1})">末页</a>
+			<div class="info">共&nbsp;<i th:text="${reviewPage.getTotalPages()}"></i>&nbsp;页，
+			到第&nbsp;<input type="text" id="numberPage" th:value="${viewpage.current+1>=reviewPage.getTotalPages()}?${reviewPage.getTotalPages()}:${viewpage.current+2}" min="1" th:max="${reviewPage.getTotalPages()}"/>&nbsp;页
+			<button id="ajaxGoToPage" th:attr="url=@{${viewpage.href}}">确定</button> </div>
 		</div>
 	</div>
 </div>
